# gsd

./: .gitignore  build.py  new_workspace.json  pyproject.toml
.github/workflows/: python-app.yml
gsd/: app.py  main.py  user_preferences.py
gsd/assets/: favicon.py
gsd/model/: __init__.py  abstract_task.py  project.py  schedulable.py  subtask.py  task.py  timedwork.py  workspace.py
gsd/project_tracker/ui/: __init__.py
gsd/ui/: __init__.py  abstract_tool_ui.py  colors.py  controls.py  drag_and_drop.py  goals_ui.py  notes_ui.py  project_tracker_ui.py  project_ui.py
gsd/ui/calendar/: __init__.py  calendar_ui.py
gsd/utils/: observer.py
