[tool.poetry]
name = "gsd"
version = "0.0.1"
description = "Get Shit Done!"
authors = ["Martin Colahan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pydantic = "^2.7.3"
nicegui = "^1.4.26"
pywebview = "^5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
